JS fixed - code review

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <label>
               <span class="form__labelText">Waluta:</span>
               <select name="currency" class="form__field js-currency">
-                <option id="euro">EUR</option>
-                <option id="dollar">USD</option>
-                <option  id="pound">GBP</option>
+                <option value="euro">EUR</option>
+                <option value="dollar">USD</option>
+                <option value="pound">GBP</option>
               </select> <p class="form__labelCurrency js-labelCurrency"></p>
             </label>
           </p>
